...
    private lazy var searchController: UISearchController = {
        let searchController = UISearchController(searchResultsController: nil)

        searchController.searchResultsUpdater = self
        searchController.searchBar.delegate = self
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Find films..."
        searchController.searchBar.sizeToFit()
        searchController.searchBar.searchBarStyle = .prominent
        
        navigationItem.searchController = searchController
        navigationItem.hidesSearchBarWhenScrolling = false

...
        searchController.searchBar.text = searchText
    }
}

extension SearchVC: SearchVCProtocol {
    func configureDesign() {
        title = "Search"
        view.backgroundColor = .systemBackground
        navigationItem.backButtonDisplayMode = .minimal
        navigationController?.navigationBar.prefersLargeTitles = true
    }

    func reloadTableView() {
...
