...
import UIKit
import SnapKit

class AccountVC: UIViewController {
    
    private let viewControllers = [SignInVC(), SignUpVC()]
    private let viewControllersTitles = ["Sign In", "Create Account"]
    
    private let imageView = UIImageView(image: UIImage.gifImageWithName("johnny"))


    private lazy var tableView: UITableView = {
        let tableView = UITableView(frame: .zero)
...
